--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+--------------------------- PHOBOS README
+
 --------------------------- INTRODUCTION
 
 Phobos is a Python 2.7 pipeline for high-resolution spectroscopic parameter and abundance analysis following the ARES+MOOG analysis
